--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/websockets": "^10.3.10",
     "@prisma/client": "^5.17.0",
+    "axios": "^1.7.4",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
